--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='-r @newrelic/next' next",
+    "dev": "cross-env NODE_OPTIONS='-r @newrelic/next' next",
     "build": "next build",
-    "start": "NODE_OPTIONS='-r @newrelic/next' next start",
+    "start": "cross-env NODE_OPTIONS='-r @newrelic/next' next start",
     "lint": "next lint"
   },
   "dependencies": {
